# ECE302_QW

./: .gitignore
Lec1/: BoxInterface.hpp  CMakeLists.txt  MagicBox.hpp  MagicBox.tpp  PlainBox.hpp  PlainBox.tpp  ToyBox.hpp  ToyBox.tpp  test_boxes.cpp
Lec7/: ArrayBagInt.hpp  CMakeLists.txt  test_array.cpp
midterm_starter/: CMakeLists.txt  ExamInterface.hpp  Midterm.cpp  Midterm.hpp  Midterm.tpp  test_midterm.cpp
problem0_starter/: CMakeLists.txt  abstract_operator.hpp  add.hpp  add.tpp  test_add.cpp
problem1_starter/: CMakeLists.txt  abstract_bag.hpp  dynamic_bag.hpp  dynamic_bag.tpp  limited_size_bag.hpp  limited_size_bag.tpp  test_dynamic_bag.cpp  test_limited_size_bag.cpp
problem2_starter/: CMakeLists.txt  Node.hpp  Node.tpp  abstract_list.hpp  array_list.hpp  array_list.tpp  linked_list.hpp  linked_list.tpp  test_array_list.cpp  test_linked_list.cpp
problem3_starter/: CMakeLists.txt  algebraic_expressions.cpp  algebraic_expressions.hpp  postpre.cpp  test_postpre.cpp
problem4_starter/: CMakeLists.txt  abstract_list.hpp  list.hpp  list.tpp  sort.hpp  test_sort.cpp
problem5_starter/: CMakeLists.txt  Node.hpp  Node.tpp  abstract_list.hpp  abstract_sorted_list.hpp  list.hpp  list.tpp  sorted_list.hpp  sorted_list.tpp  test_sorted_list.cpp
problem6_starter/: CMakeLists.txt  Node.tpp  abstract_list.hpp  abstract_priority_queue.hpp  abstract_sorted_list.hpp  list.hpp  list.tpp  priority_queue.hpp  priority_queue.tpp  sorted_list.hpp  sorted_list.tpp  test_priority_queue.cpp
problem8_starter/: ArrayMaxHeap.hpp  ArrayMaxHeap.tpp  CMakeLists.txt  abstract_heap.hpp  test_heap.cpp
problem9_starter/: CMakeLists.txt  abstract_graph.hpp  graph.hpp  graph.tpp  test_graph.cpp
project1_starter/: CMakeLists.txt  bitarray.cpp  bitarray.hpp  bitset.hpp  test_bitarray.cpp
project2_starter/: CMakeLists.txt  FindPalindrome.cpp  FindPalindrome.hpp  test_FindPalindrome.cpp
project3_starter/: Bag.hpp  Bag.tpp  CMakeLists.txt  Node.hpp  Node.tpp  Stack.hpp  Stack.tpp  XMLParser.cpp  XMLParser.hpp  test_XMLParser.cpp  xmlFile.txt
project4_starter/: CMakeLists.txt  PathFinder.cpp  PathFinder.hpp  abstract_list.hpp  abstract_queue.hpp  list.hpp  list.tpp  queue.hpp  queue.tpp  test_pathfinder.cpp
project4_starter/lib/: gif.h  lodepng.h
project5_starter/: CMakeLists.txt  frontier_queue.hpp  frontier_queue.tpp  puzzle.cpp  puzzle.hpp  puzzle_solver.cpp  puzzle_solver.hpp  state.hpp  state.tpp  test_solver.cpp
project5_starter/lib/: gif.cpp  image.cpp  image.h  lodepng.cpp
